Improve CommandFInder:
- Fix entries in image contextual menu not being revealed
- Allow for keywords
- Remove irrelevant entries from the list
- Render icons for better recognition of entries
- Support URLs of local files in HTML dialogs
- Fix UX inconsistencies